添加顺序表
添加顺序表的demo

--- a/Csharp.DataStructure.Test/Csharp.DataStructure.Test.csproj
+++ b/Csharp.DataStructure.Test/Csharp.DataStructure.Test.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6176062C-C197-4785-8331-4517BFC7F3F8}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{FCFB4208-1D43-492E-86B1-23AF87A3CF21}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Csharp.DataStructure.LinarList</RootNamespace>
-    <AssemblyName>Csharp.DataStructure.LinarList</AssemblyName>
+    <RootNamespace>Csharp.DataStructure.Test</RootNamespace>
+    <AssemblyName>Csharp.DataStructure.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -40,12 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CircleLinkedList.cs" />
-    <Compile Include="DoubleLinkedList.cs" />
-    <Compile Include="Interface\ILinarList.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SequenceList.cs" />
-    <Compile Include="SingleLinkedList.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Csharp.DataStructure.LinarList\Csharp.DataStructure.LinarList.csproj">
+      <Project>{6176062c-c197-4785-8331-4517bfc7f3f8}</Project>
+      <Name>Csharp.DataStructure.LinarList</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
