--- a/Csharp.DataStructure.LinarList/Csharp.DataStructure.LinarList.csproj
+++ b/Csharp.DataStructure.LinarList/Csharp.DataStructure.LinarList.csproj
@@ -41,11 +41,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CircleLinkedList.cs" />
+    <Compile Include="DNode.cs" />
     <Compile Include="DoubleLinkedList.cs" />
     <Compile Include="Interface\ILinarList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SequenceList.cs" />
     <Compile Include="SingleLinkedList.cs" />
+    <Compile Include="SNode.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
